removing / from images source

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="container">
         <div class="lightBlue"></div>
-        <img src="/icons/user-circle.png" alt="user icon" id="userIcon">
+        <img src="icons/user-circle.png" alt="user icon" id="userIcon">
         <h1>Jane Doe</h1>
         <div class="iconPlusWords">
-            <img src="/icons/map-marker.png" alt="map marker icon" class="smallIcons">
+            <img src="icons/map-marker.png" alt="map marker icon" class="smallIcons">
             <p>Seattle</p>
         </div>
         <p>Developer | Engineer | Problem Solver</p>
         <p>Master of shadows and te Internet!</p>
         <div class="iconPlusWords">
-            <img src="/icons/gear.png" alt="gear icon" class="smallIcons">
+            <img src="icons/gear.png" alt="gear icon" class="smallIcons">
             <a href="#">edit profile</a>
         </div>
     </div>
